# stock-picker

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  ROADMAP.md  journal.md  master_strategy_kb.md  pyproject.toml
.claude/: launch.json
.github/scripts/: check_doc_drift.py  generate_architecture.py
.github/workflows/: architecture.yml  ci.yml
app/: MODULE.md  __init__.py  alembic.ini  requirements.txt  server.py
app/auth/: emailer.py  security.py  service.py
app/db/: models.py  repository.py  session.py
app/migrations/: env.py
app/static/: auth.html
config/: v40_v40next.yaml
docs/: architecture.md
docs/decisions/: ADR-0001-repo-as-shared-memory.md  ADR-0002-dependency-policy.md  ADR-0003-human-confirmation-boundary.md  ADR-0004-yahoo-default-price-source.md  ADR-0005-product-pivot-multi-user.md  ADR-0006-auth-and-rls-enforcement-model.md  ADR-0007-react-frontend.md  README.md
docs/specs/: README.md  TEMPLATE.md  auth-layer.md  holdings-page.md  react-frontend.md  user-data-layer.md
frontend/: MODULE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: dev_server.py  export_openapi.py
sunabha_agent/: MODULE.md  scan.py  web.py
tests/: test_app_db.py  test_architecture_gen.py  test_auth.py  test_category_engine.py  test_cwh_strategy.py  test_fetcher.py  test_fundamental_gate.py  test_knoxville_strategy.py  test_lifetime_high_strategy.py  test_rhs_strategy.py  test_scan.py  test_sma_strategy.py  test_turnaround_checklist.py  test_turnaround_strategy.py  test_v10_strategy.py  test_v20_strategy.py  test_web.py
(+39 files in other folders)
