[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vivek-trading-agent"
version = "0.1.0"
description = "Signal engine implementing Vivek Singhal's 8 trading strategies"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "requests>=2.31",   # needed by the data fetcher (not yet built)
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vivek_agent*"]

[tool.unittest]
# Run with: python3 -m unittest discover -s tests -v
start-dir = "tests"
